<resources>
    <string name="config_statusBarComponent">com.android.systemui.statusbar.phone.PhoneStatusBar</string>
    <string name="system_ui_date_pattern">eeeMMMMd</string>
    <string name="status_bar_date_formatter">"%2$s
%1$s"</string>
    <string name="status_bar_date_formatter_meizu">MMM d  EEE</string>
    <string name="WidgetLayoutExtend_Description_floattouch">SmartTouch</string>
    <string name="floattouch_help_title">Introduction to SmartTouch</string>
    <string name="floattouch_help_button_close">Dismiss</string>
    <string name="floattouch_help_button_modify">Modify</string>
    <string name="floattouch_help_button_title_1">Click</string>
    <string name="floattouch_help_button_summary_1">back</string>
    <string name="floattouch_help_button_title_2">Double</string>
    <string name="floattouch_help_button_summary_2">pull down screen</string>
    <string name="floattouch_help_button_title_3">Hold</string>
    <string name="floattouch_help_button_summary_3">Move</string>
    <string name="floattouch_help_button_title_4">Slide-up</string>
    <string name="floattouch_help_button_summary_4">back to home screen</string>
    <string name="floattouch_help_button_title_5">Slide-down</string>
    <string name="floattouch_help_button_summary_5">launch notification bar</string>
    <string name="floattouch_help_button_title_6">Slide-other</string>
    <string name="floattouch_help_button_summary_6">switch between tasks</string>
    <string name="floattouch_help_button_summary_lock_screen">lock the screen</string>
    <string name="WidgetLayoutExtend_Description_wifi">Wi-Fi</string>
    <string name="WidgetLayoutExtend_Description_data">Data</string>
    <string name="WidgetLayoutExtend_Description_bluetooth">Bluetooth</string>
    <string name="WidgetLayoutExtend_Description_gps">GPS</string>
    <string name="WidgetLayoutExtend_Description_rotation">Rotation</string>
    <string name="WidgetLayoutExtend_Description_vpn">VPN</string>
    <string name="WidgetLayoutExtend_Description_hotspot">Hotspot</string>
    <string name="WidgetLayoutExtend_Description_nfc">NFC</string>
    <string name="WidgetLayoutExtend_Description_enable_full_screen_drag">Enable Full Screen Drag</string>
    <string name="WidgetLayoutExtend_Description_flash_light">Flashlight</string>
    <string name="WidgetLayoutExtend_Description_brightness">Brightness</string>
    <string name="WidgetLayoutExtend_Description_air_plane">Airplane mode</string>
    <string name="WidgetLayoutExtend_Description_mute">Mute</string>
    <string name="WidgetLayoutExtend_Description_vibration">Vibration</string>
    <string name="WidgetLayoutExtend_Description_hifi">Hi-FI</string>
    <string name="WidgetLayoutExtend_Description_dnd">DND</string>
    <string name="WidgetLayoutExtend_toast_nfc">NFC not ready, please retry later.</string>
    <string name="app_label">System UI</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_recent_remove_item_title">Remove from list</string>
    <string name="status_bar_recent_inspect_item_title">App info</string>
    <string name="status_bar_no_recent_apps">No recent apps</string>
    <string name="status_bar_accessibility_dismiss_recents">Dismiss recent apps</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Connect charger</string>
    <string name="battery_low_subtitle">The battery is getting low.</string>
    <string name="battery_low_percent_format">%d%% remaining</string>
    <string name="invalid_charger">"USB charging not supported.
Use only the supplied charger."</string>
    <string name="battery_low_why">Battery usage</string>
    <string name="status_bar_settings_settings_button">Settings</string>
    <string name="status_bar_settings_wifi_button">Wi-Fi</string>
    <string name="status_bar_settings_airplane">Airplane mode</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_settings_mute_label">Mute</string>
    <string name="status_bar_settings_auto_brightness_label">Auto</string>
    <string name="status_bar_settings_notifications">Notifications</string>
    <string name="status_bar_settings_battery_meter_format">%d%%</string>
    <string name="status_bar_network_name_separator">|</string>
    <string name="bluetooth_tethered">Bluetooth tethered</string>
    <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
    <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
    <string name="usb_device_permission_prompt">Allow the app %1$s to access the USB device?</string>
    <string name="usb_accessory_permission_prompt">Allow the app %1$s to access the USB accessory?</string>
    <string name="usb_device_confirm_prompt">Open %1$s when this USB device is connected?</string>
    <string name="usb_accessory_confirm_prompt">Open %1$s when this USB accessory is connected?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at %1$s</string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Use by default for this USB device</string>
    <string name="always_use_accessory">Use by default for this USB accessory</string>
    <string name="usb_debugging_title">Allow USB debugging</string>
    <string name="usb_debugging_message">"The computer's RSA key fingerprint is: %1$s"</string>
    <string name="usb_debugging_always">Always allow this computer to debug</string>
    <string name="compat_mode_on">Zoom to fill screen</string>
    <string name="compat_mode_off">Stretch to fill screen</string>
    <string name="screenshot_saving_ticker">Saving screenshot</string>
    <string name="screenshot_saving_title">Saving screenshot</string>
    <string name="screenshot_saving_text">Saving screenshot</string>
    <string name="screenshot_saved_title">Screenshot</string>
    <string name="screenshot_saved_text">Touch to view image details</string>
    <string name="screenshot_failed_title">"Couldn't capture the screen."</string>
    <string name="screenshot_failed_text">"Couldn't save screenshot. Storage may be occupied."</string>
    <string name="usb_preference_title">USB file transfer options</string>
    <string name="use_mtp_button_title">Mount as a media player (MTP)</string>
    <string name="use_ptp_button_title">Mount as a camera (PTP)</string>
    <string name="installer_cd_button_title">Install Android File Transfer app for Mac</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_recent">Recent apps</string>
    <string name="accessibility_search_light">Search</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_ime_switch_button">Switch input method button.</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_no_battery">No battery.</string>
    <string name="accessibility_battery_one_bar">Battery level is one bar.</string>
    <string name="accessibility_battery_two_bars">Battery level is two bars.</string>
    <string name="accessibility_battery_three_bars">Battery level is three bars.</string>
    <string name="accessibility_battery_full">Battery level is full.</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_phone_one_bar">Phone signal strength is one bar.</string>
    <string name="accessibility_phone_two_bars">Phone signal strength is two bars.</string>
    <string name="accessibility_phone_three_bars">Phone signal strength is three bars.</string>
    <string name="accessibility_phone_four_bars">Phone four bars.</string>
    <string name="accessibility_phone_signal_full">Phone signal strength is full.</string>
    <string name="accessibility_no_data">No data.</string>
    <string name="accessibility_data_one_bar">Signal strength is one bar.</string>
    <string name="accessibility_data_two_bars">Signal strength is two bars.</string>
    <string name="accessibility_data_three_bars">Signal strength is three bars.</string>
    <string name="accessibility_data_signal_full">Signal strength is full.</string>
    <string name="accessibility_wifi_off">Wi-Fi off.</string>
    <string name="accessibility_no_wifi">Wi-Fi disconnected.</string>
    <string name="accessibility_wifi_one_bar">Wi-Fi signal strength is one bar.</string>
    <string name="accessibility_wifi_two_bars">Wi-Fi signal strength is two bars.</string>
    <string name="accessibility_wifi_three_bars">Wi-Fi signal strength is three bars.</string>
    <string name="accessibility_wifi_signal_full">Wi-Fi signal strength is full.</string>
    <string name="accessibility_no_wimax">No WiMAX.</string>
    <string name="accessibility_wimax_one_bar">WiMAX signal strength is one bar.</string>
    <string name="accessibility_wimax_two_bars">WiMAX signal strength is two bars.</string>
    <string name="accessibility_wimax_three_bars">WiMAX signal strength is three bars.</string>
    <string name="accessibility_wimax_signal_full">WiMAX signal strength is full.</string>
    <string name="accessibility_no_signal">No signal.</string>
    <string name="accessibility_not_connected">Unconnected</string>
    <string name="accessibility_zero_bars">Signal strength is zero.</string>
    <string name="accessibility_one_bar">Signal strenghth is one bar.</string>
    <string name="accessibility_two_bars">Signal strength is two bars.</string>
    <string name="accessibility_three_bars">Signal strength is three bars.</string>
    <string name="accessibility_signal_full">Signal strength is full.</string>
    <string name="accessibility_desc_on">On.</string>
    <string name="accessibility_desc_off">Off.</string>
    <string name="accessibility_desc_connected">Connected.</string>
    <string name="accessibility_data_connection_gprs">GPRS</string>
    <string name="accessibility_data_connection_1x">1 X</string>
    <string name="accessibility_data_connection_hspa">HSPA</string>
    <string name="accessibility_data_connection_3g">3G</string>
    <string name="accessibility_data_connection_3.5g">3.5G</string>
    <string name="accessibility_data_connection_4g">4G</string>
    <string name="accessibility_notifications_button">Notifications.</string>
    <string name="accessibility_desc_quick_settings">Quick settings.</string>
    <string name="accessibility_clear_all">Clear all notifications.</string>
    <string name="wifi_ssid">Network SSID</string>
    <string name="wifi_security">Security</string>
    <string name="wifi_eap_method">EAP method</string>
    <string name="please_select_phase2">Phase 2 Authentication</string>
    <string name="wifi_eap_ca_cert">CA certificate</string>
    <string name="wifi_eap_user_cert">User certificate</string>
    <string name="wifi_eap_identity">Identity</string>
    <string name="wifi_eap_anonymous">Anonymous identity</string>
    <string name="wifi_wapi_psk_type">Password type</string>
    <string name="wifi_certinstall">Install or view certificate</string>
    <string name="wifi_wapicertmanager">Certificate installation</string>
    <string name="wifi_password">Password</string>
</resources>