<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/header" android:layout_width="fill_parent" android:layout_height="@dimen/notification_panel_header_height" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui">
    <RelativeLayout android:enabled="false" android:id="@id/datetime" android:paddingLeft="@dimen/status_bar_expanded_header_datetime_padding_left" android:paddingTop="@dimen/status_bar_expanded_header_datetime_padding_top" android:layout_width="wrap_content" android:layout_height="fill_parent">
        <com.android.systemui.statusbar.policy.Clock android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Clock" android:id="@id/clock" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:singleLine="true" android:layout_centerVertical="true" />
        <com.android.systemui.statusbar.policy.DateView android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Text" android:gravity="bottom|center|left" android:id="@id/date" android:paddingBottom="11.799988dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:singleLine="true" android:includeFontPadding="false" android:layout_alignParentLeft="true" />
    </RelativeLayout>
    <LinearLayout android:layout_gravity="right" android:layout_width="wrap_content" android:layout_height="fill_parent" android:animateLayoutChanges="false">
        <com.android.systemui.statusbar.phone.ClearAllNotificationIconView android:id="@id/clear_all_button" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginLeft="22.0dip" android:layout_marginTop="@dimen/status_bar_expanded_header_datetime_padding_top" />
        <View android:visibility="invisible" android:layout_width="10.0dip" android:layout_height="fill_parent" />
        <View android:layout_gravity="bottom" android:id="@id/button_divider" android:background="@drawable/status_list_divider" android:layout_width="1.0px" android:layout_height="16.0dip" android:layout_marginBottom="14.399994dip" />
        <View android:visibility="invisible" android:layout_width="10.0dip" android:layout_height="fill_parent" />
        <com.android.systemui.statusbar.phone.MorphIconView android:id="@id/expand_widgets_button" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginTop="@dimen/status_bar_expanded_header_datetime_padding_top" android:layout_marginRight="22.0dip" android:alpha="0.6" systemui:additionRight="22.0dip" systemui:additionTop="@dimen/status_bar_expanded_header_datetime_padding_top" />
    </LinearLayout>
    <FrameLayout android:visibility="gone" android:layout_width="@dimen/status_bar_expanded_header_net_spinner_width" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/status_bar_expanded_header_net_spinner_margin_left">
        <TextView android:textAppearance="@style/TextAppearance.StatusBar.Expanded.Text" android:ellipsize="end" android:gravity="bottom|center|right" android:id="@id/netSpinner" android:paddingRight="@dimen/status_bar_netSpinner_paddingright" android:paddingBottom="@dimen/status_bar_netSpinner_paddingbottom" android:layout_width="@dimen/status_bar_expanded_header_net_spinner_width" android:layout_height="fill_parent" android:text="@string/status_bar_settings_wifi_button" android:singleLine="true" android:includeFontPadding="false" />
        <ImageView android:layout_gravity="bottom|center|right" android:id="@id/netSpinner_arrow" android:paddingBottom="@dimen/status_bar_netSpinner_arrow_paddingbottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_statusbar_arrow" /> />
</FrameLayout>
    <TextView android:textSize="11.0dip" android:textStyle="bold" android:textColor="#ff00a040" android:layout_gravity="center_vertical" android:id="@id/header_debug_info" android:padding="2.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:fontFamily="sans-serif-condensed" />
    <ImageView android:id="@id/clear_all_button_deprecated" android:background="@drawable/ic_notify_button_bg" android:visibility="gone" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/ic_notify_clear" android:scaleType="center" android:contentDescription="@string/accessibility_clear_all" />
    <FrameLayout android:id="@id/settings_button_holder" android:visibility="gone" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginLeft="12.0dip">
        <ImageView android:id="@id/settings_button" android:background="@drawable/ic_notify_button_bg" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/ic_notify_settings" android:scaleType="center" android:contentDescription="@string/accessibility_desc_quick_settings" />
        <ImageView android:id="@id/notification_button" android:background="@drawable/ic_notify_button_bg" android:visibility="gone" android:layout_width="50.0dip" android:layout_height="50.0dip" android:src="@drawable/ic_notifications" android:scaleType="center" android:contentDescription="@string/accessibility_notifications_button" />
    </FrameLayout>
</FrameLayout>